Working on zoom level fixes